@@ -3,6 +3,7 @@
 	* Source/GSAttributedString.m: remove a little dead code
 	* Tests/base/NSMutableAttributedString/test00.m: add sanity checks
 	* Tests/base/NSMutableAttributedString/test01.m: add sanity checks
+	* Source/GSString.m: raise exception on character conversion failure
 
 2018-02-07  Yavor Doganov  <yavor@gnu.org>
 
